--- a/style.css
+++ b/style.css
@@ -3,3 +3,41 @@ body {
   height: 100%;
   margin: 0;
 }
+h1 {
+  text-align: center;
+}
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 900px;
+}
+figcaption {
+  font-size: medium;
+  text-align: center;
+}
+nav a {
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: #808080;
+}
+nav {
+  text-align: center;
+}
+section#featured-property > p {
+  text-align: center;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  font-size: large;
+  max-width: 800px;
+}
+#details > div {
+  width: 25%;
+  float: left;
+  text-align: center;
+}
+#details {
+  background-color: red;
+  overflow: hidden;
+}
